--- a/css/layout.css
+++ b/css/layout.css
@@ -24,4 +24,38 @@
 
 /* Posititoning Classes */
 
+.col-1-top {
+  float: right;
+  width: 32%;
+  margin-bottom: 20px;
+}
 
+.col-2-top {
+  float: left;
+  width: 66%;
+  margin-bottom: 20px;
+  padding-bottom: 47px;
+}
+
+.col-1-left {
+  float:left;
+  width: 32%;
+}
+
+.col-1-middle {
+  float:left;
+  width: 32%;
+}
+
+.col-1-right {
+  float: right;
+  width: 32%;
+}
+
+/*[class*="col-"] {
+  margin: 2%;
+}*/
+
+.first {
+  margin-left: 0%;
+}
